# CompaniesHouse

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  COMPANIES_HOUSE_API.md  JSON_OUTPUT_ISSUES.md  JSON_OUTPUT_ISSUES_AND_ACTION_PLAN.md  LIVE_CH_RATE_PROBE_25PCT.md  LIVE_EXTRACTION_05670663.md  MATFullTReportFormat.md  PREFECT_CONVERSION_PLAN.md  Prefect.md  README.md  batch_extract_companies.py  batch_extract_trusts.py  companies_house_client.py  companies_house_full_reports_extraction_pipeline.py  companies_house_parsl_pipeline.py  companieshouse_fetch.ps1  company_type.py  document_extraction_models.py  download_trusts_full_reports.py  name_enrichment.py  openrouter_document_extractor.py  parsl_pipeline_apps.py  parsl_pipeline_config.py  personnel_print.py  pipeline_shared.py  prefect.yaml  pyproject.toml  reenrich.py  requirements.txt  review_server.py  run_companieshouse.bat  shared.py  swagger (1).json  test_companies_house_client.py  test_parsl_pipeline.py
SourceData/allgroupslinksdata20260217/: Trusts.xlsx  groups.csv
docs/: COMPANIES_HOUSE_API.md  MATFullTReportFormat.md  Prefect.md
docs/archive/: JSON_OUTPUT_ISSUES_AND_ACTION_PLAN.md  LIVE_RANDOM_TEST_RUN_5.md  MAT_IMPLEMENTATION_TRACKER.md  PHASE1_CODE_REVIEW.md  PREFECT_CONVERSION_PLAN.md  companieshouse_fetch.ps1  run_companieshouse.bat  swagger (1).json  swagger.json
flows/: __init__.py  batch_extract.py
flows/tasks/: __init__.py  companies_house.py  data_loading.py  extraction.py  persistence.py
